# Multi_Instrument_Orderbook

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  roadmap.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  latency_profile.cpp  orderbook_bench.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docker/: Dockerfile
docs/: architecture.md  benchmarks.md  protocol.md
include/ordbk/core/: types.hpp  version.hpp
include/ordbk/gateway/: client.hpp  dispatcher.hpp  server.hpp  tcp.hpp
include/ordbk/instruments/: chain.hpp  contract.hpp  instrument_registry.hpp  instrument_spec.hpp  option_chain.hpp  option_contract.hpp
include/ordbk/matching/: book_matcher.hpp  engine.hpp  expiry_sweeper.hpp  matcher.hpp  matching_engine.hpp  sharded_engine.hpp  sweeper.hpp
include/ordbk/orderbook/: order.hpp  orderbook.hpp  trade.hpp
include/ordbk/protocol/: codec.hpp  framer.hpp  messages.hpp  protocol.hpp  session.hpp
include/ordbk/utils/: latency.hpp  latency_stats.hpp  order_pool.hpp  pool.hpp  spsc_ring_buffer.hpp
include/velox/core/: types.hpp  version.hpp
include/velox/gateway/: client.hpp  dispatcher.hpp  server.hpp  tcp.hpp
include/velox/instruments/: chain.hpp  contract.hpp  instrument_registry.hpp  instrument_spec.hpp  option_chain.hpp  option_contract.hpp
include/velox/matching/: book_matcher.hpp  engine.hpp  expiry_sweeper.hpp  matcher.hpp  matching_engine.hpp  sharded_engine.hpp  sweeper.hpp
include/velox/orderbook/: order.hpp  orderbook.hpp  trade.hpp
include/velox/protocol/: codec.hpp  framer.hpp  messages.hpp  protocol.hpp  session.hpp
include/velox/utils/: latency.hpp  latency_stats.hpp  order_pool.hpp  pool.hpp  spsc_ring_buffer.hpp
src/: main.cpp
src/gateway/: client.cpp  dispatcher.cpp  server.cpp  tcp.cpp
src/instruments/: chain.cpp  contract.cpp  instrument_registry.cpp  option_chain.cpp  option_contract.cpp
src/matching/: book_matcher.cpp  engine.cpp  expiry_sweeper.cpp  matcher.cpp  matching_engine.cpp  sharded_engine.cpp  sweeper.cpp
src/orderbook/: orderbook.cpp
src/protocol/: codec.cpp  framer.cpp  session.cpp
tests/: CMakeLists.txt
tests/integration/: gateway_e2e_test.cpp  options_e2e_test.cpp  sharded_engine_test.cpp
tests/property/: invariants_test.cpp
tests/unit/: codec_test.cpp  dispatcher_test.cpp  engine_test.cpp  expiry_sweeper_test.cpp  framer_test.cpp  instrument_registry_test.cpp  matching_test.cpp  option_chain_test.cpp  option_contract_test.cpp  order_test.cpp  orderbook_test.cpp  smoke_test.cpp  spsc_test.cpp  types_test.cpp
